src/assets/scss/custom/pages/_performance.scss
.performance-filter-row {
    height: 72px;
    left: 0px;
    // top: 80px;
    background: #FFFFFF;
    margin-top: -1%;
}

.performance-container {
    width: 101%;
}

.performance-filter-primary {
    background: #FFFFFF;
    border: 1px solid #53B8BB;
    border-radius: 4px;
    font-weight: 500;
    font-size: 12px;
    line-height: 33px;
    /* or 277% */
    text-align: center;
    color: #000000;
    width: 100%;
}

.performance-filter-select {
    font-weight: 400;
    font-size: 16px;
    line-height: 150%;
    color: #000000;
   width: 90%;
   height: 6vh;
}

.performance-points {
    font-weight: 500;
    font-size: 14px;
    color: #000000;
}

.performance-arrow-down {
    color: #000000;
}

.performance-accordion-border-top {
    border-top: 1px solid rgba(0, 0, 0, 0.125) !important;
}

.performance-overalldata {
    width: 100%;
    
}

.performance-overalldata-btn:not(.collapsed) {
    background-color: inherit
}

.performance-overalldata-accordion-item {
    border: unset;
    border-bottom: unset;
}

.performance-overall-txt {
    font-weight: 600;
    font-size: 18px;
    color: #000000;
}

.performance-overall-points {
    font-weight: 600;
    font-size: 18px;
    color: #000000;
}

.performance-accordion-point-data:not(.collapsed)
// .performance-accordion-point-data-body
 {
    color: #000000;
    background: #F3F2C1;
    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.05);
    border-radius: 5px;
}

.performance-accordion-point-data-label {
    font-weight: 500;
    font-size: 14px;
    color: #000000;
}

.performance-points {
    font-weight: 500;
    font-size: 14px;
    color: #000000;
}

.performance-game-points-coin {
    // margin-left: 50%;
}

// Responsive

/* 
  ##Device = Desktops
  ##Screen = 1281px to higher resolution desktops
*/

@media (min-width: 1281px) {}

@media only screen and (-webkit-min-device-pixel-ratio: 1.25) and (min-width: 1281px),
only screen and (min--moz-device-pixel-ratio: 1.25) and (min-width: 1281px),
only screen and (-o-min-device-pixel-ratio: 1.25/1) and (min-width: 1281px),
only screen and (min-device-pixel-ratio: 1.25) and (min-width: 1281px),
only screen and (min-resolution: 200dpi) and (min-width: 1281px),
only screen and (min-resolution: 1.25dppx) and (min-width: 1281px) {
    .performance-game-points-coin {
        margin-left: 30%;
    }
}

/* 
  ##Device = Laptops, Desktops
  ##Screen = B/w 1025px to 1280px
*/

@media (min-width: 1025px) and (max-width: 1280px) {}

@media only screen and (-webkit-min-device-pixel-ratio: 1.25) and (min-width: 1025px) and (max-width: 1280px),
only screen and (min--moz-device-pixel-ratio: 1.25) and (min-width: 1025px) and (max-width: 1280px),
only screen and (-o-min-device-pixel-ratio: 1.25/1) and (min-width: 1025px) and (max-width: 1280px),
only screen and (min-device-pixel-ratio: 1.25) and (min-width: 1025px) and (max-width: 1280px),
only screen and (min-resolution: 200dpi) and (min-width: 1025px) and (max-width: 1280px),
only screen and (min-resolution: 1.25dppx) and (min-width: 1025px) and (max-width: 1280px) {}

/* 
  ##Device = Tablets, Ipads (portrait)
  ##Screen = B/w 768px to 1024px
*/

@media (min-width: 768px) and (max-width: 1024px) {}

/* 
  ##Device = Tablets, Ipads (landscape)
  ##Screen = B/w 768px to 1024px
*/

@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {}

/* 
  ##Device = Low Resolution Tablets, Mobiles (Landscape)
  ##Screen = B/w 481px to 767px
*/

@media (min-width: 481px) and (max-width: 767px) {}

/* 
  ##Device = Most of the Smartphones Mobiles (Portrait)
  ##Screen = B/w 320px to 479px
*/

@media (min-width: 320px) and (max-width: 480px) {}

